--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
                                     </h5>  
                                 </nav>
                             </div>          
-                            <!--<main class="attendance-main" *ngIf='isUserLoggedIn' >-->
+                            <main class="attendance-main" *ngIf='isUserLoggedIn' >
                                  <main class="attendance-main">
                                 <router-outlet></router-outlet>
                             </main> 
