--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -224,7 +224,7 @@
 						</div>
 					</div>
 					<div class="data-footer">
-						<a href="#/my/expense" class="btn-flat">NEW REQUEST</a>
+						<a href="#/my/expense/new" class="btn-flat">NEW REQUEST</a>
 						<a href="#/my/expense/submitted" class="btn-flat">ALL REQUESTS</a>
 					</div>
 				</div>
@@ -236,7 +236,7 @@
                         </div>
                     </div>
                     <div class="data-footer">
-                        <a href="#/my/expense" class="btn-flat">NEW REQUEST</a>
+                        <a href="#/my/expense/new" class="btn-flat">NEW REQUEST</a>
                     </div>
                 </div>
                 <div class="card white card-bg travel-bg phase2" id="travel-without-records">
