--- a/src/app/modules/expense/expense-template.html
+++ b/src/app/modules/expense/expense-template.html
@@ -4,6 +4,8 @@
 			<h5>Expense Reimbursement
 				<a href="/vibranthelp/help-landing-page.html" target="_blank" title="Help" class="help-btn">
 					<i class="right fa fa-question-circle" aria-hidden="true"></i></a>
+					<span class="right mandatory-message"><span *ngIf="isUs">US<a><img class="flag-img" src="/assets/images/us-flag.png" /></a></span>
+				<span *ngIf="!isUs">IND<a ><img class="flag-img" src="/assets/images/india-flag.png" /></a></span></span>
 			</h5>
 		</div>
 	</div>
@@ -17,7 +19,7 @@
 					<div class="col s12 m8 l5 padding-zero">
 						<ul class="tabs expense-tabs" style="width: 100%;">
 							<li class="tab col s3" *ngFor="let item of MenuData">
-								<a [routerLink]="[item.routerName]">{{item.title}}</a>
+								<a routerLink="{{item.routerName}}" routerLinkActive="router-link-active">{{item.title}}</a>
 							</li>
 
 						</ul>
